[gd_scene load_steps=7 format=3 uid="uid://b2j2cmiomgwuk"]

[ext_resource type="Script" path="res://player/example_grounded_player_controller.gd" id="1_k76p5"]
[ext_resource type="Script" path="res://player/camera_controller.gd" id="2_k7urt"]
[ext_resource type="Script" path="res://utilities/input_buffer.gd" id="3_xm4mr"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_dc48x"]
margin = 0.0

[sub_resource type="LabelSettings" id="LabelSettings_l3nv4"]
font_size = 32
font_color = Color(0, 1, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_o2hp3"]
font_size = 32
font_color = Color(0, 0, 1, 1)

[node name="Player" type="CharacterBody3D" node_paths=PackedStringArray("collider")]
collision_layer = 2
input_ray_pickable = false
axis_lock_angular_x = true
axis_lock_angular_y = true
axis_lock_angular_z = true
script = ExtResource("1_k76p5")
collider = NodePath("CollisionShape")
max_snap_length = 0.59
max_step_height = 0.68

[node name="CollisionShape" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_dc48x")

[node name="PivotY" type="Node3D" parent="."]
top_level = true
script = ExtResource("2_k7urt")

[node name="PivotX" type="Node3D" parent="PivotY"]

[node name="PivotZ" type="Node3D" parent="PivotY/PivotX"]

[node name="Camera3D" type="Camera3D" parent="PivotY/PivotX/PivotZ"]
fov = 90.0

[node name="JumpInputBuffer" type="Node" parent="."]
script = ExtResource("3_xm4mr")
input_name = "jump"
buffer_window = 3

[node name="GUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="SpeedLabel" type="Label" parent="GUI"]
layout_mode = 0
offset_right = 94.0
offset_bottom = 54.0
text = "Speed
"
label_settings = SubResource("LabelSettings_l3nv4")

[node name="HorizontalSpeedLabel" type="Label" parent="GUI"]
layout_mode = 0
offset_left = 2.0
offset_top = 69.0
offset_right = 42.0
offset_bottom = 92.0
text = "Horizontal Speed
"
label_settings = SubResource("LabelSettings_o2hp3")
